revised v after live link check.  layout sizes correctly when shrunk. header wrong size

--- a/css/grid.css
+++ b/css/grid.css
@@ -8,7 +8,7 @@
 (12)gutters = 20px, 1/2 gutter on edges
 */
 
-main {
+.row {
 	max-width: 1000px;
 	padding-left: 20px;
 	padding-right: 20px;
@@ -31,20 +31,20 @@ main {
 /*float for all elements to line up,
 padding is gutter (each side is 1/2 of 20px)
 10px/960px = 1.041666%*/
-.col_4 {
+.col_4, .col_12, .col_3, .col_6 {
 	float: left;
 	padding-left: 1.04666%;
 	padding-right: 1.04666%;
 }
 
 /*mobile device default settings*/
-.col_4 {
+.col_4, .col_12, .col_3, .col_6 {
 	width: 100%;
 }
 
 /*non-mobile device screens*/
 @media only screen and (min-width: 640px) {
-.col_4 {
+.col_4, .col_12, .col_3, .col_6 {
 	width: 33.3%
 }
 }
