--- a/css/main.css
+++ b/css/main.css
@@ -1,57 +1,39 @@
-img {
+body {
+	font-family: "Roboto", sans-serif;
+
+}
+
+.headshot {
 	width: 100%
 }
 
-.title_bar {
-	background-color: #FF8C00;
-	position: relative;
-	min-height: 75px;
-	margin-bottom: 30px;
-
+header {
+	background-color: #eebb44;
+	margin-bottom: 40px;
 }
 
-h1 {
-	font-weight: bolder;
-	font-size: 22px;
-	max-width: 100%;
-	padding-left: 20px;
-	padding-right: 20px;
-	margin: 0;
-	margin-top: 10px;
+header h1 {
+	line-height: 1;
+	margin-bottom: 0;
 }
 
-.subtitle {
-	font-size: 11px;
-	max-width: 100%;
-	padding-left: 20px;
-	padding-right: 20px;
-	margin: 0;
-	margin-top: 5px;
-	margin-bottom: 5px;
-}
 
 .character {
-	border: 1px;
-	border-color: #808080;
-	background-color: #F8F8FF;
-}
-.desc_box {
-	margin-left: 20px;
+	border: 1px solid #DCDCDC;
 	margin-bottom: 20px;
-	padding-bottom: 10px;
 }
 
-.char_name {
-	font-weight: bold;
-	padding-top: 0px;
+.card_content {
+	padding: 20px;
 }
 
-.container {
-	max-width: 1000px;
+
+.col_12 {
+	/*max-width: 1000px;
 	margin-right: auto;
 	margin-left: auto;
 	padding-left: 10px;
 	padding-top: 10px;	
-}
+}*/
 
 }
